package tutoraid.logic.commands;

public abstract class FindCommand extends Command {
    public static final String COMMAND_WORD = "find";
}
